--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.389 2002/08/08 19:31:44 wcc Exp $
+$Id: UPDATES1.6,v 1.390 2002/08/08 20:49:31 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          BHAB      compile fix for systems that do not support snprintf()
 various   Wcc/      fixed a bug where if the bot is kicked while channel information is
           [sL]      still being received, the bot will think it's still on the channel and
                     not rejoin
