--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.390 2002/08/08 20:49:31 wcc Exp $
+$Id: UPDATES1.6,v 1.391 2002/08/09 19:26:42 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+KuNgFo0   Wcc/      friends/ops/bots are now correctly unbanned when a ban is set on a
+          [sL]      channel that matches their host
           BHAB      compile fix for systems that do not support snprintf()
 various   Wcc/      fixed a bug where if the bot is kicked while channel information is
           [sL]      still being received, the bot will think it's still on the channel and
